test/valid/recurse2.js
function f(x) { return f(x); return 0; }
f;
