test/invalid/infinite.js
function f(x) { return x(x); }
